eks-ingress-controller/extras/kong/nutrition-ingress.yml
###################################
###         Health-API          ###
##################################
---
apiVersion: v1
kind: Namespace
metadata:
  name: nutrition
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: health-api
  name: health-api
  namespace: nutrition
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-api
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: health-api
        name: health-api
        version: v1
    spec:
      containers:
      - image: fidelissauro/health-api:latest
        name: health-api
        ports:
        - containerPort: 8080
          name: http   
        startupProbe:
          failureThreshold: 10
          httpGet:
            path: /healthcheck
            port: 8080
          periodSeconds: 10
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /healthcheck
            port: 8080          
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: health-api
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"    
  labels:
    app.kubernetes.io/name: health-api
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
  selector:
    app: health-api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: recommendations-grpc
  name: recommendations-grpc
  namespace: nutrition
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendations-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "30000"
        policy.cilium.io/proxy-visibility: "<Egress/53/UDP/DNS>,<Egress/30000/TCP/HTTP>"
      labels:
        app: recommendations-grpc
        name: recommendations-grpc
        version: v1
    spec:
      containers:
      - image: fidelissauro/recommendations-grpc-service:latest
        name: recommendations-grpc
        ports:
        - containerPort: 30000
          name: http   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: recommendations-grpc
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: recommendations-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 30000
    protocol: TCP
  selector:
    app: recommendations-grpc
  type: ClusterIP
#######################
###   BMR Service   ###
#######################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bmr-grpc
  name: bmr-grpc
  namespace: nutrition
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bmr-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "30000"
      labels:
        app: bmr-grpc
        name: bmr-grpc
        version: v1
    spec:
      containers:
      - image: fidelissauro/bmr-grpc-service:latest
        name: bmr-grpc
        ports:
        - containerPort: 30000
          name: http   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: bmr-grpc
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: bmr-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 30000
    protocol: TCP
  selector:
    app: bmr-grpc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: imc-grpc
  name: imc-grpc
  namespace: nutrition
spec:
  replicas: 2
  selector:
    matchLabels:
      app: imc-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "bmr-grpc.bmr:30000"
      labels:
        app: imc-grpc
        name: imc-grpc
        version: v1
    spec:
      containers:
      - image: fidelissauro/imc-grpc-service:latest
        name: imc-grpc
        ports:
        - containerPort: 30000
          name: http   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: imc-grpc
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: imc-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 30000
    protocol: TCP
  selector:
    app: imc-grpc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: calories-grpc
  name: calories-grpc
  namespace: nutrition
spec:
  replicas: 2
  selector:
    matchLabels:
      app: calories-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "30000"
      labels:
        app: calories-grpc
        name: calories-grpc
        version: v1
    spec:
      containers:
      - image: fidelissauro/calories-grpc-service:latest
        name: calories-grpc
        ports:
        - containerPort: 30000
          name: http   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: calories-grpc
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: calories-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 30000
    protocol: TCP
  selector:
    app: calories-grpc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: proteins-grpc
  name: proteins-grpc
  namespace: nutrition
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proteins-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "30000"
      labels:
        app: proteins-grpc
        name: proteins-grpc
        version: v1
    spec:
      containers:
      - image: fidelissauro/proteins-grpc-service:latest
        name: proteins-grpc
        ports:
        - containerPort: 30000
          name: http   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: proteins-grpc
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: proteins-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 30000
    protocol: TCP
  selector:
    app: proteins-grpc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: water-grpc
  name: water-grpc
  namespace: nutrition
spec:
  replicas: 2
  selector:
    matchLabels:
      app: water-grpc
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "30000" 
      labels:
        app: water-grpc
        name: water-grpc
        version: v1
    spec:
      containers:
      - image: fidelissauro/water-grpc-service:latest
        name: water-grpc
        ports:
        - containerPort: 30000
          name: http   
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: water-grpc
  namespace: nutrition
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "30000"    
  labels:
    app.kubernetes.io/name: water-grpc
    app.kubernetes.io/instance: health-api 
spec:
  ports:
  - name: web
    port: 30000
    protocol: TCP
  selector:
    app: water-grpc
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nutrition-ingress
  namespace: nutrition
  annotations:
    konghq.com/strip-path: "false"
  labels:
    app.kubernetes.io/name: health-api
spec:
  ingressClassName: kong # criado automaticamente pelo chart (ingressController.ingressClass=kong)
  rules:
    - host: nutrition-ingress.msfidelis.com.br # Substitua pelo seu domínio
      http:
        paths:
          - path: /calculator
            pathType: Prefix
            backend:
              service:
                name: health-api
                port:
                  number: 8080
